syntax = "proto3";

option go_package = "github.com/yandex-cloud/geesefs/internal/pb";

service Recovery {
    rpc Unmount(UnmountRequest) returns (UnmountResponse);
}

message UnmountRequest {
    
}

message UnmountResponse {

}
